content overflow fix

--- a/assets/styles/basics/_global.scss
+++ b/assets/styles/basics/_global.scss
@@ -7,6 +7,7 @@
 html,
 body {
   min-height: 100%;
+  overflow-x: hidden;
 }
 
 html {
