--- a/assets/styles/components/_content.scss
+++ b/assets/styles/components/_content.scss
@@ -13,7 +13,6 @@
   @include flex(column);
   margin: 0 auto;
   max-width: #{min(75rem, 100vw)};
-  overflow-x: hidden;
   padding: var(--content-padding);
   width: 100%;
 }
